--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -5,7 +5,7 @@ $main-font: "TwCenW01-Medium", sans-serif;
 $header-font: "IBM Plex Serif";
 
 @mixin container-mobile {
-  width: 95vw;
+  width: 90vw;
   margin: auto;
 }
 
